--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "author": "Emeka Tony",
   "license": "ISC",
   "dependencies": {
+    "@types/compression": "^1.7.2",
     "@types/node-schedule": "^1.3.2",
     "argon2": "^0.28.2",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "debug": "^4.3.2",
     "dotenv": "^8.6.0",
