--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "perishable_inventory",
+  "name": "User_registration",
   "version": "1.0.0",
-  "description": "Perishable inventory",
+  "description": "Two step registration",
   "main": "index.js",
   "scripts": {
     "start": "tsc && node --unhandled-rejections=strict ./dist/app.js",
@@ -21,12 +21,14 @@
     "dotenv": "^8.6.0",
     "express": "^4.17.1",
     "express-winston": "^4.2.0",
+    "joi": "^17.4.2",
     "moment": "^2.29.1",
     "node-schedule": "^2.0.0",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "shortid": "^2.2.16",
     "typeorm": "^0.2.37",
+    "uuid": "^8.3.2",
     "winston": "^3.3.3"
   },
   "devDependencies": {
@@ -37,6 +39,7 @@
     "@types/mocha": "^9.0.0",
     "@types/shortid": "^0.0.29",
     "@types/supertest": "^2.0.11",
+    "@types/uuid": "^8.3.1",
     "chai": "^4.3.4",
     "mocha": "^9.1.1",
     "source-map-support": "^0.5.19",
