--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "@types/supertest": "^2.0.11",
     "@types/uuid": "^8.3.1",
     "chai": "^4.3.4",
+    "faker": "^4.1.0",
     "mocha": "^9.1.1",
+    "sinon": "^7.5.0",
     "source-map-support": "^0.5.19",
     "supertest": "^6.1.6",
     "ts-node": "^10.2.1",
